src/test/valid/custom/impParamArrLiter.wacc
# a simple function definition and call

# Output:
# 0

# Program:

begin
  int f(x) is
    int[] a = [1, x, 3] ;
    return 0 
  end
  println 0
end
